Workshop 1: materials added.

--- a/index.Rmd
+++ b/index.Rmd
@@ -34,7 +34,9 @@ us support you please:
   &nbsp; _Learn about the fundamentals of R thinking._ <br>
   &nbsp; _Practical exercises to understand the fundamentals of R ._
 + **Materials**
-  + To be posted.
+  + [Exercises: Base R Concepts](https://github.com/saghirb/R-datatable-Intro/raw/master/Exercises/Base-R/Base-R-Exercises.pdf)
+  + [Solutions: Base R Concepts](https://raw.githubusercontent.com/saghirb/R-datatable-Intro/master/Exercises/Base-R/Base-R-Solutions.R) 
+    + *Solutions are auto generated so comments are not correct!*
 
 <br>
 
