--- a/index.Rmd
+++ b/index.Rmd
@@ -44,7 +44,8 @@ us support you please:
   &nbsp; _Learn to manipulate and summarise data._ <br>
   &nbsp; _Exercises based on real-life world population data._
 + **Materials**
-  + https://ilustat.com/shared/GSiRdt.zip
+  + [Notes & Exercises](https://github.com/saghirb/R-datatable-Intro/raw/master/Share/GSiRdt.zip)
+  + [Solutions: World Population `data.table` Exercises ](https://github.com/saghirb/R-datatable-Intro/raw/master/Share/World-Popn-dt-Solutions.zip)
 
 <br>
 
