--- a/index.Rmd
+++ b/index.Rmd
@@ -67,7 +67,8 @@ us support you please:
   &nbsp; _Create beautiful graphical presentations using R._ <br>
   &nbsp; _Customise your plots._
 + **Materials**
-  + To be posted.
+  + [Notes & Exercises](https://github.com/saghirb/ggplot2-Intro-Workshop/raw/master/Share/ggplot2-Intro.zip)
+
 
 <br>
 
