Workshop 4 (ggplot2) Fixed a link and added new link

--- a/index.Rmd
+++ b/index.Rmd
@@ -76,8 +76,9 @@ us support you please:
   + [Notes & Exercises](https://github.com/saghirb/ggplot2-Intro-Workshop/raw/master/Share/ggplot2-Intro.zip)
   + [`ggplot2` Exercise Solutions](https://github.com/saghirb/ggplot2-Intro-Workshop/raw/master/Share/ggplot2-Solutions.zip) 
   + Additional Materials
-    + [ggplot2 extensions](https://www.ggplot2-exts.org/)
+    + [ggplot2 extensions](https://exts.ggplot2.tidyverse.org/gallery/)
     + [ggplot2 Cheat Sheet](https://github.com/rstudio/cheatsheets/raw/master/data-visualization-2.1.pdf)
+    + [ggplot2 Gallery](http://r-graph-gallery.com/)
 
 <br> 
 
